--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Cia yra tekstas</h1>
     <script src="./bundle.js"></script>
   </body>
 </html>
