update styles structure

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Cia yra tekstas</h1>
+    <h3>this is weapon</h3>
     <script src="./bundle.js"></script>
   </body>
 </html>
